Pre-Version-Without-Auth

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,224 @@
-.App {
-  text-align: center;
+.main-body {
+  height: '100vh';
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav-links {
+  display: flex;
+  justify-content: end;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/******************** Sidebar ********************/
+.sidebar {
+  height: 100vh;
+  margin: 0 0 0 -15px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.sidebar .list-group-item {
+  border: none;
+  border-bottom: 0.5px solid grey;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.sidebar .list-group-item .span {
+  padding-left: 10px;
+  text-decoration: none;
+}
+.sidebar .list-group-item .span,
+.sidebar .list-group-item .icon {
+  color: grey;
+}
+.sidebar .list-group-item .span .toggle-link {
+  border: none;
+  text-decoration: none;
+  color: grey;
+}
+.sidebar .list-group-item .toggle-list {
+  color: grey;
+  border: none;
+  border-bottom: 1px solid grey;
+  border-radius: 0;
+  font-size: 14px;
+}
+/******************** Home ********************/
+.home {
+  padding-top: 20px;
+}
+.home .card {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  background-color: #eee;
+  height: 250px;
 }
-
-.App-link {
-  color: #61dafb;
+.home .card .box-header h1 {
+  padding: 20px;
+  font-size: 70px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.home .card .box-text {
+  font-size: 20px;
+}
+/******************** Dashboard ********************/
+.dashboard {
+  padding-top: 40px;
+}
+.dashboard .box{
+  text-align: center;
+  margin: 10px;
+  background-color: #eee;
+  height: calc(100vh - 50px);
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+.dashboard .box .icon {
+  width: 100px;
+  height: 150px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.dashboard .box .icon .img {
+  font-size: 60px;
+  color: #eee;
+}
+.dashboard .box .icon-1 {
+  background-color: limegreen;
+}
+.dashboard .box .icon-2 {
+  background-color: rgb(224, 54, 54);
+}
+.dashboard .box .icon-3 {
+  background-color: lightblue;
+}
+.dashboard .box .icon-4 {
+  background-color: rgb(227, 227, 12);
+}
+.dashboard .box .content {
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  padding-left: 50px;
+  padding-top: 30px;
+}
+.dashboard .box .content p {
+  opacity: 0.7;
+}
+/******************** Categories - Products - Sales - Users - Sales_Add 
+                      Monthly_Sales - Daily_Sales - Profile ********************/
+.categories .container,
+.products-manage .container,
+.sales-manage .container,
+.users-manage .container,
+.sales-monthly .container,
+.sales-daily .container,
+.profile .container,
+.users-add .container,
+.sales-add .container {
+  padding-top: 60px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.categories .container .card-1,
+.products-manage .container .card-1,
+.sales-manage .container .card-1,
+.profile .container .card-1 {
+  width: 40%;
+  height: 100%;
+}
+.categories .container .card-header,
+.products-manage .container .card-header,
+.sales-manage .container .card-header,
+.sales-monthly .container .card-header,
+.sales-daily .container .card-header,
+.profile .container .card-header,
+.users-add .container .card-header,
+.sales-add .container .card-header {
+  margin: 10px 0;
+  display: flex;
+  align-items: center;
+  border-bottom: 2px solid #6c757d;
+}
+.categories .container .card-header h4,
+.products-manage .container .card-header h4,
+.sales-manage .container .card-header h4,
+.users-manage .container .card-header h4,
+.sales-monthly .container .card-header h4,
+.sales-daily .container .card-header h4,
+.profile .container .card-header h4,
+.users-add .container .card-header h4,
+.sales-add .container .card-header h4 {
+  padding-left: 10px;
+}
+.categories .container .card-header .icon,
+.products-manage .container .card-header .icon,
+.sales-manage .container .card-header .icon
+.sales-monthly .container .card-header .icon,
+.sales-daily .container .card-header .icon,
+.profile .container .card-header .icon,
+.users-add .container .card-header .icon,
+.sales-add .container .card-header .icon {
+  font-size: 25px;
+  padding-bottom: 5px;
+}
+.categories .container .card-body input,
+.products-manage .container .card-body input,
+.products-add .container .card-body input,
+.sales-manage .container .card-body input,
+.profile .container .card-body input,
+.users-add .container .card-body input,
+.sales-add .container .card-header input {
+  margin-bottom: 20px;
+}
+.categories .container .card-2 ,
+.products-manage .container .card-2,
+.sales-manage .container .card-2,
+.profile .container .card-2 {
+  width: 55%;
+}
+.categories .container .card-2 .actions,
+.products-manage .container .card-2 .actions,
+.products-add .container .card-2 .actions,
+.sales-manage .container .card-2 .actions,
+.users-manage .container .card-2 .actions,
+.users-manage .container .card-2 .status {
+  text-align: center;
+}
+/******************** Sales - Users - Sales-Daily - Sales_Monthly - User_Add ********************/
+.sales-manage .container .card-2,
+.users-manage .container .card-2,
+.sales-monthly .container .card-2,
+.sales-daily .container .card-2,
+.users-add .container .card-2,
+.sales-add .container .card-2 {
+  width: 100%;
+}
+.sales-manage .container .card-2 .card-header,
+.users-manage .container .card-2 .card-header {
+  margin: 10px 0;
+  display: flex;
+  align-items: center;
+  border-bottom: 2px solid #6c757d;
+  justify-content: space-between;
+}
+.sales-manage .container .card-header .icon-side,
+.users-manage .container .card-header .icon-side,
+.sales-monthly .container .card-header .icon-side,
+.sales-daily .container .card-header .icon-side,
+.users-add .container .card-header .icon-side,
+.sales-add .container .card-header .icon-side {
+  display: flex;
+  align-items: center;
+}
+.sales-manage .container .card-header .icon,
+.users-manage .container .card-header .icon,
+.sales-monthly .container .card-header .icon,
+.sales-daily .container .card-header .icon,
+.users-add .container .card-header .icon,
+.sales-add .container .card-header .icon {
+  font-size: 25px;
+  padding-bottom: 5px;
 }
