--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'poppins',sans-serif;
+}
+
 .main-body {
   height: '100vh';
+  background: url(https://c4.wallpaperflare.com/wallpaper/636/636/890/line-strip-grey-background-wallpaper-preview.jpg);
+  background-size: cover;
 }
 
 .nav-links {
@@ -9,7 +18,7 @@
 /******************** Sidebar ********************/
 .sidebar {
   height: 100vh;
-  margin: 0 0 0 -15px;
+  margin: 0 10px 0 -15px;
 }
 .sidebar .list-group-item {
   border: none;
@@ -17,6 +26,7 @@
   display: flex;
   align-items: center;
   cursor: pointer;
+  font-size: 14px;
 }
 .sidebar .list-group-item .span {
   padding-left: 10px;
@@ -61,17 +71,23 @@
 .dashboard {
   padding-top: 40px;
 }
+.dashboard .container .row {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
 .dashboard .box{
   text-align: center;
   margin: 10px;
   background-color: #eee;
-  height: calc(100vh - 50px);
+  height: 300px;
   position: relative;
   display: flex;
   justify-content: center;
+  border-radius: 20px;
 }
 .dashboard .box .icon {
-  width: 100px;
+  width: 200px;
   height: 150px;
   position: absolute;
   top: 0;
@@ -79,6 +95,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 20px;
 }
 .dashboard .box .icon .img {
   font-size: 60px;
@@ -116,17 +133,20 @@
 .sales-daily .container,
 .profile .container,
 .users-add .container,
-.sales-add .container {
+.sales-add .container,
+.sales-edit .container {
   padding-top: 60px;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
 .categories .container .card-1,
 .products-manage .container .card-1,
 .sales-manage .container .card-1,
 .profile .container .card-1 {
-  width: 40%;
+  width: 100%;
   height: 100%;
 }
 .categories .container .card-header,
@@ -136,7 +156,8 @@
 .sales-daily .container .card-header,
 .profile .container .card-header,
 .users-add .container .card-header,
-.sales-add .container .card-header {
+.sales-add .container .card-header,
+.sales-edit .container .card-header {
   margin: 10px 0;
   display: flex;
   align-items: center;
@@ -150,7 +171,8 @@
 .sales-daily .container .card-header h4,
 .profile .container .card-header h4,
 .users-add .container .card-header h4,
-.sales-add .container .card-header h4 {
+.sales-add .container .card-header h4,
+.sales-edit .container .card-header h4 {
   padding-left: 10px;
 }
 .categories .container .card-header .icon,
@@ -160,7 +182,8 @@
 .sales-daily .container .card-header .icon,
 .profile .container .card-header .icon,
 .users-add .container .card-header .icon,
-.sales-add .container .card-header .icon {
+.sales-add .container .card-header .icon,
+.sales-edit .container .card-header .icon {
   font-size: 25px;
   padding-bottom: 5px;
 }
@@ -170,14 +193,15 @@
 .sales-manage .container .card-body input,
 .profile .container .card-body input,
 .users-add .container .card-body input,
-.sales-add .container .card-header input {
+.sales-add .container .card-header input,
+.sales-edit .container .card-header input {
   margin-bottom: 20px;
 }
 .categories .container .card-2 ,
 .products-manage .container .card-2,
 .sales-manage .container .card-2,
 .profile .container .card-2 {
-  width: 55%;
+  width: 100%;
 }
 .categories .container .card-2 .actions,
 .products-manage .container .card-2 .actions,
@@ -193,7 +217,8 @@
 .sales-monthly .container .card-2,
 .sales-daily .container .card-2,
 .users-add .container .card-2,
-.sales-add .container .card-2 {
+.sales-add .container .card-2,
+.sales-edit .container .card-2 {
   width: 100%;
 }
 .sales-manage .container .card-2 .card-header,
@@ -209,7 +234,8 @@
 .sales-monthly .container .card-header .icon-side,
 .sales-daily .container .card-header .icon-side,
 .users-add .container .card-header .icon-side,
-.sales-add .container .card-header .icon-side {
+.sales-add .container .card-header .icon-side,
+.sales-edit .container .card-header .icon-side {
   display: flex;
   align-items: center;
 }
@@ -218,7 +244,8 @@
 .sales-monthly .container .card-header .icon,
 .sales-daily .container .card-header .icon,
 .users-add .container .card-header .icon,
-.sales-add .container .card-header .icon {
+.sales-add .container .card-header .icon,
+.sales-edit .container .card-header .icon {
   font-size: 25px;
   padding-bottom: 5px;
 }
@@ -231,6 +258,8 @@
   justify-content: center;
   background: #212529;
   height: 100vh;
+  background: url(https://c4.wallpaperflare.com/wallpaper/636/636/890/line-strip-grey-background-wallpaper-preview.jpg);
+  background-size: cover;
 }
 
 .authentication .container {
@@ -243,65 +272,84 @@
   padding-bottom: 30px;
   border-radius: 50px;
 }
-.authentication .container .header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 9px;
-  width: 100%;
-  margin-top: 30px;
+
+.form-box{
+    position: relative;
+    width: 400px;
+    height: 480px;
+    background: transparent;
+    border: 2px solid rgba(255,255,255,0.5);
+    border-radius: 20px;
+    backdrop-filter: blur(15px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
-.authentication .container .text {
+.form-value h2{
+    font-size: 2em;
+    color: #fff;
+    text-align: center;
+}
+.inputbox{
+    position: relative;
+    margin: 30px 0;
+    width: 310px;
+    border-bottom: 2px solid #fff;
+}
+.inputbox label{
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    color: #fff;
+    font-size: 1em;
+    pointer-events: none;
+    transition: .5s;
+}
+input:focus ~ label,
+input:valid ~ label{
+top: -5px;
+}
+.inputbox input {
+    width: 100%;
+    height: 50px;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 1em;
+    padding:0 35px 0 5px;
+    color: #fff;
+}
+.inputbox ion-icon{
+    position: absolute;
+    right: 8px;
+    color: #fff;
+    font-size: 1.2em;
+    top: 20px;
+}
+.form-value button {
+    width: 100%;
+    height: 40px;
+    border-radius: 20px;
+}
+.form-value button:hover {
+  background-color: #fff;
   color: #212529;
-  font-size: 48px;
-  font-weight: bold;
 }
-.authentication .container .underline {
-  width: 100px;
-  height: 6px;
-  background: #212529;
-  border-radius: 9px;
+.register{
+    font-size: .9em;
+    color: #fff;
+    text-align: center;
+    margin: 25px 0 10px;
 }
-.authentication .container .inputs {
-  margin-top: 55px;
-  display: flex;
-  flex-direction: column;
-  gap: 25px;
+.register p span{
+    text-decoration: none;
+    color: #a2a1a1;
+    font-weight: 600;
+    display: block;
+    cursor: pointer;
 }
-.authentication .container .inputs .input {
-  display: flex;
-  align-items: center;
-  margin: auto;
-  width: 350px;
-  height: 70px;
-  background: #eaeaea;
-  border-radius: 15px;
-}
-.authentication .container .inputs .input input {
-  height: 50px;
-  width: 400px;
-  background: transparent;
-  border: none;
-  outline: none;
-  color: #212529;
-  font-size: 19px;
-  padding: 15px;
-}
-.authentication .container .submit-container {
-  display: flex;
-  gap: 30px;
-  margin: 40px auto 0;
-}
-.authentication .container .submit-container .submit {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 150px;
-  height: 40px;
-  background: #212529;
-  color: white;
-  border-radius: 50px;
-  font-size: 19px;
-  font-weight: 200;
-  cursor: pointer;
+.register p span:hover{
+    text-decoration: underline;
 }
