--- a/src/App.css
+++ b/src/App.css
@@ -273,10 +273,10 @@
   border-radius: 50px;
 }
 
-.form-box{
+.form-box-register{
     position: relative;
     width: 400px;
-    height: 480px;
+    height: 580px;
     background: transparent;
     border: 2px solid rgba(255,255,255,0.5);
     border-radius: 20px;
@@ -284,6 +284,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+}
+.form-box-login{
+  position: relative;
+  width: 400px;
+  height: 480px;
+  background: transparent;
+  border: 2px solid rgba(255,255,255,0.5);
+  border-radius: 20px;
+  backdrop-filter: blur(15px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
 }
 .form-value h2{
@@ -321,7 +334,7 @@ top: -5px;
     padding:0 35px 0 5px;
     color: #fff;
 }
-.inputbox ion-icon{
+.inputbox .icon{
     position: absolute;
     right: 8px;
     color: #fff;
@@ -336,6 +349,10 @@ top: -5px;
 .form-value button:hover {
   background-color: #fff;
   color: #212529;
+}
+.form-value .submit {
+  text-decoration: underline;
+  cursor: pointer;
 }
 .register{
     font-size: .9em;
